Fix: 2747: Icons not showing up on Grid
Justified use of !important as it is effectively only applied to leaf
nodes.

--- a/Arriba/Arriba.Web/segoe-symbol.css
+++ b/Arriba/Arriba.Web/segoe-symbol.css
@@ -14,7 +14,7 @@
 
 [class^="icon-"],
 [class*=" icon-"] {
-  font-family: 'Segoe UI Symbol', segoe-ui-symbol, segoe-ui-symbol-ie;
+  font-family: 'Segoe UI Symbol', segoe-ui-symbol, segoe-ui-symbol-ie !important; /* Otherwise would be superceeded by rules such as: .grid * { font-family: "Segoe UI Semibold" } */
   font-weight: normal;
   font-style: normal;
   text-decoration: inherit;
